--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+aws.access.key = 555555
+aws.secret.key = 1323123
+s3.bucketName = daasdadas
+s3.quotaBytes = 999999999999
+s3.endpoint.url = "schoolb.sajayanegar.ir/"
+s3.region = "us-east-1"
