debugged application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
-aws.access.key = 555555
-aws.secret.key = 1323123
-s3.bucketName = daasdadas
-s3.quotaBytes = 999999999999
-s3.endpoint.url = "schoolb.sajayanegar.ir/"
-s3.region = "us-east-1"
+aws.access.key = AKIAIOSFODNN7EXAMPLE
+aws.secret.key = wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+s3.bucketName = debugger
+# 10 گیگابایت ↓
+s3.quotaBytes = 10737418240
+s3.endpoint.url = "s3.schoolb.ir/"
+# نزدیک ترین سرور به ایران ↓
+s3.region.static = "ap-southwest-2"
