added configure data hardcode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-
-aws.access.key = AKIAIOSFODNN7EXAMPLE
-aws.secret.key = wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-s3.bucketName = debugger
-# 10 گیگابایت ↓
-s3.quotaBytes = 10737418240
-s3.endpoint.url = "s3.schoolb.ir/"
-# نزدیک ترین سرور به ایران ↓
-s3.region.static = "ap-southwest-2"
+#
+#aws.access.key = AKIAIOSFODNN7EXAMPLE
+#aws.secret.key = wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+#s3.bucketName = debugger
+## 1 گیگابایت ↓
+#s3.quotaBytes = 10737418240
+#s3.endpoint.url = "78.157.35.83:8448"
+## نزدیک ترین سرور به ایران ↓
+#s3.region.static = "ap-southwest-2"
+#
+#s3.maxAge = 1073741824
