resolve all method

--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation 'com.amazonaws:aws-java-sdk-core:1.12.429'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.429'
+
 
 // https://mvnrepository.com/artifact/com.ceph/rados
     implementation group: 'com.ceph', name: 'rados', version: '0.5.0'
@@ -36,28 +35,35 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework/spring-web
     implementation group: 'org.springframework', name: 'spring-web', version: '4.3.11.RELEASE'
 
-    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
-    testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.47'
+        // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
+//    testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.47'
 
-    // https://mvnrepository.com/artifact/com.github.vladimir-bukhtoyarov/bucket4j-core
-    implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '6.2.0'
+        // https://mvnrepository.com/artifact/com.github.vladimir-bukhtoyarov/bucket4j-core
+//    implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '6.2.0'
 
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.67'
+//    implementation 'com.amazonaws:aws-java-sdk-s3:2.12.67'
+//
+//    implementation 'software.amazon.awssdk:s3:2.20.26'
+//
+//    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.459'
+//
+//// https://mvnrepository.com/artifact/software.amazon.awssdk/netty-nio-client
+//    testImplementation group: 'software.amazon.awssdk', name: 'netty-nio-client', version: '2.20.51'
 
-    implementation 'software.amazon.awssdk:s3:2.20.26'
-
-// https://mvnrepository.com/artifact/software.amazon.awssdk/netty-nio-client
-    testImplementation group: 'software.amazon.awssdk', name: 'netty-nio-client', version: '2.20.51'
-
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+        // https://mvnrepository.com/artifact/org.projectlombok/lombok
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 
 
+// https://mvnrepository.com/artifact/software.amazon.awssdk/s3
+    testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.56'
+
+
+    implementation 'software.amazon.awssdk:s3:2.20.56'
 
 
 
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
