getFileSize and getFileFormatAndUploadTime and uploadZip and downloadDirectoryAsZip methods implemented

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.56'
     implementation 'software.amazon.awssdk:s3:2.20.56'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
 }
 
 tasks.named('test') {
