resolved some problem in configure and downgrade jdk to 11 and spring boot to 2

--- a/build.gradle
+++ b/build.gradle
@@ -91,14 +91,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation group: 'com.ceph', name: 'rados', version: '0.5.0'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '1.0.1.RELEASE'
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '1.0.1.RELEASE'
     implementation group: 'org.springframework', name: 'spring-web', version: '4.3.11.RELEASE'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation group: 'software.amazon.awssdk', name: 's3', version: '2.20.56'
     implementation 'software.amazon.awssdk:s3:2.20.56'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.1.1'
+
 
 }
 
