--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-#
-#aws.access.key = AKIAIOSFODNN7EXAMPLE
-#aws.secret.key = wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-#s3.bucketName = debugger
-## 1 گیگابایت ↓
-#s3.quotaBytes = 10737418240
-#s3.endpoint.url = "78.157.35.83:8448"
-## نزدیک ترین سرور به ایران ↓
-#s3.region.static = "ap-southwest-2"
-#
+aws.accessKeyId=<ACCESS_KEY>
+aws.secretAccessKey=<SECRET_ACCESS_KEY>
+aws.region=<REGION>
+s3.bucketName=<BUCKET_NAME>
 #s3.maxAge = 1073741824
+
+spring.main.allow-bean-definition-overriding=true
+#debug=true
