use MinIo config and changed some methods for that

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-aws.accessKeyId=<ACCESS_KEY>
-aws.secretAccessKey=<SECRET_ACCESS_KEY>
-aws.region=<REGION>
-s3.bucketName=<BUCKET_NAME>
+#aws.accessKeyId=<ACCESS_KEY>
+#aws.secretAccessKey=<SECRET_ACCESS_KEY>
+#aws.region=<REGION>
+#s3.bucketName=<BUCKET_NAME>
 #s3.maxAge = 1073741824
 
-spring.main.allow-bean-definition-overriding=true
-#debug=true
+#spring.main.allow-bean-definition-overriding=true
+#spring.http.multipart.max-file-size=50MB
+#spring.http.multipart.max-request-size=50MB
