--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.11'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.example'
@@ -87,24 +87,35 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//
+//    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+//
+//    testImplementation 'junit:junit:4.13.2'
+//// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
+//    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.464'
+//
+//
+//    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+//
+////    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.1.1'
+//
+//// https://mvnrepository.com/artifact/io.minio/minio
+//    implementation group: 'io.minio', name: 'minio', version: '8.4.5'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation group: 'com.ceph', name: 'rados', version: '0.5.0'
-//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '1.0.1.RELEASE'
-    implementation group: 'org.springframework', name: 'spring-web'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 
     testImplementation 'junit:junit:4.13.2'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.460'
 
+    implementation group: 'software.amazon.awssdk', name: 's3', version: '2.17.76'
 
-    // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
 
-    // https://mvnrepository.com/artifact/org.mockito/mockito-core
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.1.1'
-
+    implementation group: 'io.minio', name: 'minio', version: '8.4.5'
 
 }
 
