--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,26 @@
 #spring.main.allow-bean-definition-overriding=true
 #spring.http.multipart.max-file-size=50MB
 #spring.http.multipart.max-request-size=50MB
+
+## ????? ??? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.group-name=API Documentation
+#
+## ????? ???? ???? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.base-path=/api
+#
+## ????? ??????? ?????? ?? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.enabled=true
+#
+## ????? ??? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.title=My API Documentation
+#
+## ????? ???? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.version=1.0
+#
+## ????? ??????? ????? (???????)
+#springfox.documentation.swagger.v2.documentation-aspects.description=API documentation for My Application
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+debug=true
+
+server.port=8081
